# grafite

./: .gitignore  .gitmodules  .replit  CMakeLists.txt  README.md
.github/workflows/: build.yml
bench/: CMakeLists.txt  bench_template.hpp  bench_utils.hpp  reproducibility.md  workload_gen.cpp
bench/filters_benchmark/: bench_bucketing.cpp  bench_grafite.cpp  bench_proteus.cpp  bench_rencoder.cpp  bench_rosetta.cpp  bench_snarf.cpp  bench_surf.cpp
bench/include/Rosetta/: .gitignore  README.md  _WQ_auto.sample.ini  _WQ_auto.sh  bloom  bloom.cpp  disk.h  disk_experiment.cpp  dst.cpp  dst.h  gen_string_workload.sh  parse.sh  plot-exp.py  run_workload  run_workload.cpp  string_test.cpp  test  test.cpp
bench/include/Rosetta/monet_scripts/: parse_monet_output_to_csv.py
bench/scripts/: download_datasets.sh  execute_tests.sh  generate_datasets.sh  graphs.ipynb  test.py
examples/: CMakeLists.txt  serialization.cpp  simple.cpp
include/grafite/: grafite.hpp
tests/: CMakeLists.txt  tests.cpp
